--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="nav-header">
+      <div class="nav-header dpt-30 dpb-30">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-3">
@@ -46,84 +46,92 @@
             <div class="col-6">
               <nav class="navigation">
                 <ul class="d-flex mb-0 px-0 list-none nav">
-                  <li class="me-4 dmt-25 dpb-25 active"><a href=""
+                  <li class="me-4 dmt-20 dpb-20 active"><a href=""
                       class="text-decoration-none font20 fw-medium">Home</a></li>
-                  <li class="me-4 dmt-25 dpb-25 menu-item"><a href=""
+                  <li class="me-4 dmt-20 dpb-20 menu-item"><a href=""
                       class="text-decoration-none font20 fw-medium">Shop</a>
                     <div class="mega-menu position-absolute top-100 start-0 w-100 tpt-0 tpb-0 transition">
                       <div class="container">
-                        <!-- <div class="back-btn tk-din-2014 text-2D2D2D res-font16 res-leading20 tmb-30 d-flex d-lg-none">
-                        </div> -->
-                        <div class="bg-139cd5 radius30 dpt-15 dpb-15 px-1">
+                        <div class="bg-139cd5 radius30 dpt-15 dpb-15 px-3">
                           <div class="tab-container">
                             <div class="tab-menu">
-                              <ul class="list-none d-flex justify-content-center mb-0 px-0">
-                                <li><a href="#"
-                                    class="tab-item tab-btn text-decoration-none d-inline-flex align-items-center rounded-pill font20 fw-medium active"
+                              <div class="row">
+                                <div class="col-4">
+                                  <a href="#"
+                                    class="tab-item w-100 tab-btn text-decoration-none d-inline-flex align-items-center justify-content-center rounded-pill font20 fw-medium active"
                                     data-id="tab1">
-                                    Insulated Boxes </a></li>
-                                <li><a href="#"
-                                    class="tab-item tab-btn text-decoration-none d-inline-flex align-items-center rounded-pill font20 fw-medium"
+                                    Insulated Boxes </a>
+                                </div>
+                                <div class="col-4">
+                                  <a href="#"
+                                    class="tab-item w-100 tab-btn text-decoration-none d-inline-flex align-items-center justify-content-center rounded-pill font20 fw-medium"
                                     data-id="tab2">
                                     Ice Packs</a>
-                                </li>
-                                <li><a href="#"
-                                    class="tab-item tab-btn text-decoration-none d-inline-flex align-items-center rounded-pill font20 fw-medium"
+                                </div>
+                                <div class="col-4">
+                                  <a href="#"
+                                    class="tab-item w-100 tab-btn text-decoration-none d-inline-flex align-items-center justify-content-center rounded-pill font20 fw-medium"
                                     data-id="tab3">
                                     Sundry </a>
-                                </li>
-                              </ul>
+                                </div>
+                              </div>
                             </div>
-                            <div class="tab tab-active dmt-25" data-id="tab1">
+                            <div class="tab tab-active" data-id="tab1">
                               <div class="row row15">
-                                <div class="col-4 header-card radius15 card-hover">
-                                  <a href="" class="text-decoration-none d-inline-flex align-items-center h-100">
-                                    <div class="header-card-img me-4 overflow0-hidden">
+                                <div class="col-4 dmt-30">
+                                  <a href=""
+                                    class="header-card card-hover radius15 text-decoration-none d-inline-flex align-items-center w-100">
+                                    <div class="header-card-img me-4 overflow-hidden">
                                       <img src="assets/images/shop-card.png" alt=""
                                         class="h-100 w-100 object-cover img">
                                     </div>
                                     <div class="font18 fw-medium text-013945">Foil-Box</div>
                                   </a>
                                 </div>
-                                <div class="col-4 header-card radius15 card-hover">
-                                  <a href="" class="text-decoration-none d-inline-flex align-items-center h-100">
-                                    <div class="header-card-img me-4 overflow0-hidden">
+                                <div class="col-4 dmt-30">
+                                  <a href=""
+                                    class="header-card card-hover radius15 text-decoration-none d-inline-flex align-items-center w-100">
+                                    <div class="header-card-img me-4 overflow-hidden">
                                       <img src="assets/images/shop-card.png" alt=""
                                         class="h-100 w-100 object-cover img">
                                     </div>
                                     <div class="font18 fw-medium text-013945">Foil-Box</div>
                                   </a>
                                 </div>
-                                <div class="col-4 header-card radius15 card-hover">
-                                  <a href="" class="text-decoration-none d-inline-flex align-items-center h-100">
-                                    <div class="header-card-img me-4 overflow0-hidden">
+                                <div class="col-4 dmt-30">
+                                  <a href=""
+                                    class="header-card card-hover radius15 text-decoration-none d-inline-flex align-items-center w-100">
+                                    <div class="header-card-img me-4 overflow-hidden">
                                       <img src="assets/images/shop-card.png" alt=""
                                         class="h-100 w-100 object-cover img">
                                     </div>
                                     <div class="font18 fw-medium text-013945">Foil-Box</div>
                                   </a>
                                 </div>
-                                <div class="col-4 header-card radius15 card-hover">
-                                  <a href="" class="text-decoration-none d-inline-flex align-items-center h-100">
-                                    <div class="header-card-img me-4 overflow0-hidden">
+                                <div class="col-4 dmt-30">
+                                  <a href=""
+                                    class="header-card card-hover radius15 text-decoration-none d-inline-flex align-items-center w-100">
+                                    <div class="header-card-img me-4 overflow-hidden">
                                       <img src="assets/images/shop-card.png" alt=""
                                         class="h-100 w-100 object-cover img">
                                     </div>
                                     <div class="font18 fw-medium text-013945">Foil-Box</div>
                                   </a>
                                 </div>
-                                <div class="col-4 header-card radius15 card-hover">
-                                  <a href="" class="text-decoration-none d-inline-flex align-items-center h-100">
-                                    <div class="header-card-img me-4 overflow0-hidden">
+                                <div class="col-4 dmt-30">
+                                  <a href=""
+                                    class="header-card card-hover radius15 text-decoration-none d-inline-flex align-items-center w-100">
+                                    <div class="header-card-img me-4 overflow-hidden">
                                       <img src="assets/images/shop-card.png" alt=""
                                         class="h-100 w-100 object-cover img">
                                     </div>
                                     <div class="font18 fw-medium text-013945">Foil-Box</div>
                                   </a>
                                 </div>
-                                <div class="col-4 header-card radius15 card-hover">
-                                  <a href="" class="text-decoration-none d-inline-flex align-items-center h-100">
-                                    <div class="header-card-img me-4 overflow0-hidden">
+                                <div class="col-4 dmt-30">
+                                  <a href=""
+                                    class="header-card card-hover radius15 text-decoration-none d-inline-flex align-items-center w-100">
+                                    <div class="header-card-img me-4 overflow-hidden">
                                       <img src="assets/images/shop-card.png" alt=""
                                         class="h-100 w-100 object-cover img">
                                     </div>
@@ -142,11 +150,11 @@
                       </div>
                     </div>
                   </li>
-                  <li class="me-4 dmt-25 dpb-25"><a href="" class="text-decoration-none font20 fw-medium">Our Range</a>
+                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium">Our Range</a>
                   </li>
-                  <li class="me-4 dmt-25 dpb-25"><a href="" class="text-decoration-none font20 fw-medium">Bespoke
+                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium">Bespoke
                       Packaging</a></li>
-                  <li class="me-4 dmt-25 dpb-25"><a href="" class="text-decoration-none font20 fw-medium">Resources</a>
+                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium">Resources</a>
                   </li>
                 </ul>
               </nav>
