--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
               <nav class="navigation">
                 <ul class="d-flex mb-0 px-0 list-none nav">
                   <li class="me-4 dmt-20 dpb-20 active"><a href=""
-                      class="text-decoration-none font20 fw-medium">Home</a></li>
+                      class="text-decoration-none font20 fw-medium nav-header-a">Home</a></li>
                   <li class="me-4 dmt-20 dpb-20 menu-item"><a href=""
-                      class="text-decoration-none font20 fw-medium">Shop</a>
+                      class="text-decoration-none font20 fw-medium nav-header-a">Shop</a>
                     <div class="mega-menu position-absolute top-100 start-0 w-100 tpt-0 tpb-0 transition">
                       <div class="container">
                         <div class="bg-139cd5 radius30 dpt-15 dpb-15 px-3">
@@ -150,11 +150,11 @@
                       </div>
                     </div>
                   </li>
-                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium">Our Range</a>
+                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium nav-header-a">Our Range</a>
                   </li>
-                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium">Bespoke
+                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium nav-header-a">Bespoke
                       Packaging</a></li>
-                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium">Resources</a>
+                  <li class="me-4 dmt-20 dpb-20"><a href="" class="text-decoration-none font20 fw-medium nav-header-a">Resources</a>
                   </li>
                 </ul>
               </nav>
