--- a/public/shop.html
+++ b/public/shop.html
@@ -15,25 +15,253 @@
 
 <body>
     <main>
-        <div class="shop-section">
+        <section class="shop-section dpt-100">
             <div class="container">
-                <div class="font48 text-013945 fw-medium leading16">
+                <div class="font48 text-013945 text-center leading24 fw-medium dmb-50">
                     Shop
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div >
-                        Insulated Boxes
+                <div class="tab-container">
+                    <div class="tab-menu">
+                        <div class="row">
+                            <div class="col-4">
+                                <a href="#"
+                                    class="tab-item w-100 tab-btn text-decoration-none d-inline-flex align-items-center justify-content-center rounded-pill font20 fw-medium transition active"
+                                    data-id="tab1">
+                                    Insulated Boxes </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#"
+                                    class="tab-item w-100 tab-btn text-decoration-none d-inline-flex align-items-center justify-content-center rounded-pill font20 transition fw-medium"
+                                    data-id="tab2">
+                                    Ice Packs</a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#"
+                                    class="tab-item w-100 tab-btn text-decoration-none d-inline-flex align-items-center justify-content-center rounded-pill font20 transition fw-medium"
+                                    data-id="tab3">
+                                    Sundry </a>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        Ice Packs
+                </div>
+                <div class="box-description bg-f2f3f4 dmt-55 radius30 dpt-100 dpb-100 px-5">
+                    <div class="dmb-75">
+                        <div class="font22 red-hat fw-normal leading24 text-center dmb-15">
+                            Our range of Insulated Boxes are all excellent options for the transport of your chilled
+                            goods. We offer a wide range of solutions, all with their own unique benefits. Whether you
+                            need something that is high performance, cost effective, high protection, or 100%
+                            recyclable, we have a solution for you.
+                        </div>
                     </div>
-                    <div>
-                        Sundry
+
+                    <div class="box-card-section">
+                        <div class="row">
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="shop-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="shop-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Foil-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="shop-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="shop-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card2.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Boxy-Bag
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="shop-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="shop-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card3.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Link-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="shop-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="shop-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card4.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Eco-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="shop-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="shop-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card5.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Tile-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="shop-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="shop-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card6.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Moulded Polystyrene Boxes with Cardboard Outer
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="shop-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="shop-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card7.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Moulded Polystyrene Boxes
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="ice-pack-section">
+                        <div class="row">
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="ice-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="ice-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Foil-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="ice-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="ice-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card2.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Boxy-Bag
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="ice-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="ice-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card3.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Link-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="ice-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="ice-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card4.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Eco-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="ice-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="ice-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card5.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Tile-Box
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="ice-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="ice-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card6.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Moulded Polystyrene Boxes with Cardboard Outer
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-4 dmb-35">
+                                <a href=""
+                                    class="ice-card d-flex justify-content-center align-items-center bg-white text-decoration-none w-100 radius30 card-hover transition p-5">
+                                    <div>
+                                        <div class="ice-card-img dmb-15 overflow-hidden">
+                                            <img src="assets/images/shop-card7.png" class="w-100 h-100 object-cover img"
+                                                alt="">
+                                        </div>
+                                        <div class="font22 fw-medium leading24 text-013945 text-center">
+                                            Moulded Polystyrene Boxes
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-        </div>
+        </section>
     </main>
 
 
