about us changes

--- a/public/about-us.html
+++ b/public/about-us.html
@@ -71,17 +71,22 @@
                 </div>
                 <div class="history-slider col-12 dpt-20 dpb-100">
                     <div class="col-6 history-content">
-                        <a class="position-relative text-decoration-none" href="">
+                        <a class="text-decoration-none" href="">
                             <div class="history-img ">
                                 <img class="w-100 h-100 object-cover radius30 p-3"
                                     src="./assets/images/history-slider1.png" alt="...">
                             </div>
-                            <div class="timeline-bg position-absolute ">
+                            <div class="timeline-bg mx-auto ">
                                 <img src="./assets/images/timeline-date-bg.svg" alt="...">
                             </div>
-                            <div class="text-white font24 font-medium dmt-20">
-                                Lyan Packaging Supplies was formed by <span class="fw-medium">Ly</span>nn and
-                                <span>An</span> drew, which is where the name <span>“Lyan”</span>came from
+                            <div class="red-hat text-white text-center font24 font-medium dmt-20">
+                                Lyan Packaging Supplies was formed by 
+                                <span class="fw-black">Ly</span>
+                                nn and
+                                <span class="fw-black">An</span>
+                                 drew, which is where the name 
+                                 <span class="fw-black">“Lyan”</span>
+                                 came from
                             </div>
                         </a>
                     </div>
@@ -91,10 +96,10 @@
                                 <img class="w-100 h-100 object-cover radius30 p-3"
                                     src="./assets/images/history-slider2.png" alt="">
                             </div>
-                            <div class="timeline-bg position-absolute ">
+                            <div class="timeline-bg mx-auto ">
                                 <img src="./assets/images/timeline-date-bg.svg" alt="...">
                             </div>
-                            <div class="text-white font24 font-medium dmt-20">
+                            <div class="red-hat text-white text-center font24 font-medium dmt-20">
                                 Lyan Packaging moved to the Wrexham Industrial Estate
                             </div>
                         </a>
@@ -105,8 +110,11 @@
                                 <img class="w-100 h-100 object-cover radius30 p-3"
                                     src="./assets/images/history-slider3.png" alt="">
                             </div>
-                            <div class="timeline-bg position-absolute">
+                            <div class="timeline-bg mx-auto">
                                 <img src="./assets/images/timeline-date-bg.svg" alt="...">
+                            </div>
+                            <div class="red-hat text-white text-center font24 font-medium dmt-20">
+                                The company successfully achieved ISO 9001 Accreditation
                             </div>
                         </a>
                     </div>
@@ -116,13 +124,17 @@
                                 <img class="w-100 h-100 object-cover radius30" src="./assets/images/history-slider4.png"
                                     alt="">
                             </div>
-                            <div class="timeline-bg position-absolute ">
+                            <div class="timeline-bg mx-auto">
                                 <img src="./assets/images/timeline-date-bg.svg" alt="...">
+                            </div>
+                            <div class="red-hat text-white text-center font24 font-medium dmt-20">
+                                Icertech was established in 2005 by David Jones. The original range included Easi-Chill
+                                Coolants and
+                                Tile-Boxes
                             </div>
                         </a>
                     </div>
                 </div>
-            </div>
             </div>
         </section>
     </main>
