--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,8 @@
             <div class="col-lg-9 col-12 d-lg-flex justify-content-lg-between">
               <nav class="navigation">
                 <ul class="d-flex mb-0 px-0 list-none nav">
-                  <li class="me-lg-4 dmt-20 tmt-0 menu-item dpb-20 tpt-10 tpb-10 active"><a href=""
+                  <li class="me-lg-4 dmt-20 tmt-0 menu-item dpb-20 tpt-10 tpb-10 active">
+                    <a href=""
                       class="text-decoration-none font20 res-font18 fw-medium nav-header-a position-relative">Home</a>
                   </li>
                   <li class="me-lg-4 dmt-20 tmt-0 menu-item dpb-20 tpt-10 tpb-10"><a href=""
@@ -70,10 +71,12 @@
                           <div class="tab-menu">
                             <div class="row flex-column flex-lg-row">
                               <div class="col-lg-4 col-12">
-                                <a href="#"
-                                  class="tab-item w-100 text-decoration-none d-inline-flex align-items-center justify-content-lg-center rounded-pill res-text-white font20 fw-medium active"
-                                  data-id="tab1">
-                                  Insulated Boxes </a>
+                                <div class="d-flex">
+                                  <a href="#"
+                                    class="tab-item w-100 text-decoration-none d-inline-flex align-items-center justify-content-lg-center rounded-pill res-text-white font20 fw-medium active"
+                                    data-id="tab1">
+                                    Insulated Boxes </a>
+                                </div>
                                 <div class="tab-item1"></div>
                               </div>
                               <div class="col-lg-4 col-12">
